# facharbeit

./: .gitignore  README.md  RustLanguage.tex  code.txt  expose.tex  expose.tex.bak  facharbeit.tex  generate_drawio.ps1  old.txt  refs.bib  refs_facharbeit.bib  refs_facharbeit.bib.bak  titlePage.aux  titlePage.tex  titlePage.tex.bak
.devcontainer/: devcontainer.json  settings.json
auto-correct/: .gitignore  Cargo.toml  corrected.tex
auto-correct/src/: main.rs
diagrams/: basic.drawio  chat.drawio  messaging_messenger.drawio  sample_send.drawio
example/: main.tex.bak  titlePageSLU.tex.bak
img/: bg.pdn
