[package]
name = "auto-correct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clipboard-win = "5.1.0"
punkt = "1.0.5"
thirtyfour = "0.31.0"
tokio = { version = "1.33.0", features = ["full"] }

[features]
default = [ ]
chrome = []
